--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -95,7 +95,7 @@ const targetPath =
     }
   }
 
-  /* Language button - consistent styling */
+  /* Language button */
   .lang-btn {
     position: absolute;
     right: 0;
@@ -106,7 +106,7 @@ const targetPath =
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: var(--font);
+    font-family: "Libre Baskerville", Georgia, serif;
     font-size: 0.875rem;
     font-weight: 600;
     color: #fff;
@@ -120,9 +120,11 @@ const targetPath =
 
   /* Arabic character styling */
   .lang-btn.arabic {
-    font-size: 1.125rem;
+    font-family: "Amiri", Georgia, serif;
+    font-size: 1.25rem;
     font-weight: 400;
     line-height: 1;
+    padding-top: 2px;
   }
 
   .lang-btn:active {
